refactor: 💡 Use aikars flags
- Remove incubator modules